[gd_scene load_steps=2 format=3 uid="uid://cmusicbox001"]

[ext_resource type="Script" path="res://src/minigames/music_box.gd" id="1_script"]

[node name="MusicBox" type="Node2D"]
script = ExtResource("1_script")
num_keys = 5
max_rounds = 5

[node name="Background" type="ColorRect" parent="."]
offset_right = 500.0
offset_bottom = 300.0
color = Color(0.12, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
offset_left = 20.0
offset_top = 15.0
offset_right = 480.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.85, 0.8, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "ðŸŽµ Music Box"
horizontal_alignment = 1

[node name="KeysContainer" type="HBoxContainer" parent="."]
offset_left = 30.0
offset_top = 70.0
offset_right = 470.0
offset_bottom = 220.0
theme_override_constants/separation = 10

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -3.0

[node name="DebugPanel" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 230.0
offset_right = 480.0
offset_bottom = 350.0
theme_override_constants/separation = 5

[node name="DebugTitle" type="Label" parent="DebugPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "=== DEBUG ==="

[node name="RoundLabel" type="Label" parent="DebugPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Round: 1 / 5 | Sequence length: 1"

[node name="SequenceLabel" type="Label" parent="DebugPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Sequence: [0]"

[node name="ButtonRow" type="HBoxContainer" parent="DebugPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="DebugPanel"]
layout_mode = 2
text = "â–¶ Play Sequence"

[node name="AutosolveButton" type="Button" parent="DebugPanel"]
layout_mode = 2
text = "âœ“ Auto-solve"

[node name="ResetButton" type="Button" parent="DebugPanel"]
layout_mode = 2
text = "â†º Reset"
